# 2024-T0002-EC09-G02

./: .gitignore  README.md  dashboard.json  go.work  go.work.sum  pyvenv.cfg  requirements.txt
src/: private-north.pem.key  setup.cfg  setup.py  test.py  tox.ini
src/authentication-keys/: Diagrama UML - Implatação.drawio  center_cert.pem  center_key.pem  east_cert.pem  east_key.pem  north_cert.pem  north_key.pem  south_cert.pem  south_key.pem  test_cert.pem  test_key.pem  west_cert.pem  west_key.pem
src/config/: grafana-prometheus.sh
src/copia/: .gitignore  DataGenerator.py  LICENSE  README.md  consumer.go  generator.go  go.mod  go.sum  main.go  mongo.go  producer.go  publisher.go  publisher.py  topicGenerator.py  writer.go
src/copia/certificate/: mqtt-client-cert.pem  mqtt-client-key.pem  (+2 more)
src/feedbacks/: package-lock.json  package.json
src/generator/: DataGenerator.py
src/main/: docker-compose.yaml  generator.go  go.mod  main.go  publisher.go
src/mqtt/: config.json  flemer.csv  publisher.py
src/mqtt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/mqtt_aws/: solar_radiation_sensor.cert.pem  start.sh
src/mqtt_python/: publisher.go  publisher_test.go
src/mqtt_python.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/simulador/: tox.ini
src/simulator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tests/: client.properties  config.json  consumer.go  dynamos.py  generator.go  generator.py  go.mod  go.sum  kafka_test.go  mongo.go  mongo_test.go  pipline_test.go  publisher.go  simulation_test.go  subscriber.go  test_simulator.py
(+324 files in other folders)
