[metadata]
name = simulator
version = 1.0
author = Megamentes
author_email = elisa.flemer@sou.inteli.edu.br
description = Simulador de sensor
long_description = file: README.md
long_description_content_type = text/markdown
url = https://inteli.edu
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt


[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    requests
    importlib-metadata
    pydantic
    boto3
    awsiotsdk
    

[options.packages.find]
exclude = 
    tests

[options.extras_require]
test =
    pytest
    pytest-cov
    mypy
    flake8
    tox